# deploying-machine-learning-models

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CMD.ipynb  Dockerfile  HelloWorld.md  Makefile  Procfile  README.md  Untitled.ipynb  another_test.txt  dockerfile  input_test.json  kaggle.json  leacture_note.md  requirements.txt  test.js  z
.circleci/: config.yml  config.yml.bk.txt  kaggle.json
222venv/: pyvenv.cfg
Deploying-ML-Models/: Makefile
Section-04-Research-and-Development/: 02-Machine-Learning-Pipeline-Feature-Engineering.ipynb  05-Machine-Learning-Pipeline-Scoring-New-Data.ipynb  06-Feature-Engineering-with-Open-Source.ipynb  07-Feature-Engineering-Pipeline.ipynb  08-End-to-end-Machine-Learning-Pipeline.ipynb  08-Final-Machine-Learning-Pipeline.ipynb  09-Final-Machine-Learning-Pipeline.ipynb  Machine-Learning-Pipeline-Step1-DataAnalysis.ipynb  Machine-Learning-Pipeline-Step2-Feature-Engineering.ipynb  Machine-Learning-Pipeline-Step3-Feature-Selection.ipynb  Machine-Learning-Pipeline-Step4-Model-Building.ipynb  Machine-Learning-Pipeline-WrapUp-for-Model-Deployment.ipynb  preprocessors.py  preprocessors_bonus.py  requirements.txt
Version_OLD/: LICENSE
assignment-4-titantic-prod/: MANIFEST.in  mypy.ini  pyproject.toml  setup.py  tox.ini
assignment-section-05/: generate_test_data.py  mypy.ini  pyproject.toml  setup.py  tox.ini
assignment-section-05/classification_model/: config.yml  pipeline.py  predict.py  train_pipeline.py
assignment-section-05/classification_model/config/: core.py
assignment-section-05/classification_model/processing/: data_manager.py  features.py  validation.py
assignment-section-05/requirements/: requirements.txt  test_requirements.txt  typing_requirements.txt
assignment-section-05/tests/: conftest.py  test_features.py  test_prediction.py
demo_env/: pyvenv.cfg
deploy-mlm/: pyvenv.cfg
enc/: pyvenv.cfg
fenv/: pyvenv.cfg
jupyter_notebooks/: requirements.txt
my-assignment-section-5/: tox.ini
my_work/: first_go.py
newenv/: pip-selfcheck.json  (+1 more)
(+348 files in other folders)
